--- a/investigate-HIV-datasets.ipynb
+++ b/investigate-HIV-datasets.ipynb
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of all these countries, they may have been reconstructed or reorganized. But in order to conduct further analysis, I will mannually set up a dictionary to map these countries to continents."
+    "Of all these countries, they may have been reconstructed or reorganized. But in order to conduct further analysis, I will manually set up a dictionary to map these countries to continents."
    ]
   },
   {
@@ -511,7 +511,7 @@
    "source": [
     "At first I take a look at child death in 2008. It is surprising to see there are 9 countries in Africa among top 10. These are South Africa, Nigeria, Mozambique, Tanzania, Uganda, Zambia, Ethiopia, Kenya and Malawi. The only Asian country is India. It is also surprising to see the total number of death among top 10 countries accounts for 73% of total global death.\n",
     "\n",
-    "I then replot the bars by different continents. Not surprisingly Africa counts for tha majority of death (92%)."
+    "I then replot the bars by different continents. Not surprisingly Africa counts for the majority of death (79%)."
    ]
   },
   {
@@ -544,35 +544,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Let's then take a look at permill(number per thousand) child death in 2008."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data = {'from_year': [2010, 2011, 2012, 2011, 2012, 2010, 2011, 2012],\n",
-    "    'name': ['John', 'John1', 'John', 'John', 'John4', 'John', 'John1', 'John6'],\n",
-    "    'out_days': [11, 8, 10, 15, 11, 6, 10, 4]}\n",
-    "persons = pd.DataFrame(data, columns=[\"from_year\", \"name\", \"out_days\"])\n",
-    "days_off_yearly = persons.groupby([\"from_year\", \"name\"])['out_days'].sum()\n",
-    "print(days_off_yearly)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print (days_off_yearly.reset_index()\n",
-    "                      .sort_values(['from_year','out_days'],ascending=False))"
+    "Let's then take a look at permill (number per thousand) child death in 2008."
    ]
   },
   {
@@ -614,7 +586,7 @@
    "source": [
     "All top 10 countries are in Africa. India drops out this time, one possible guess is that India has a much larger total population basis which makes the permill very small. \n",
     "\n",
-    "Throughout this quick review we can find HIV is a public concern and cause of death in many parts of Africa. There are more than 200k children died from HIV just in 2008, which is an astonishing number. A much more astonishing fact is that 92% happens in Africa! A quick review on [HIV/AIDS in Africa of wikipedia](https://en.wikipedia.org/wiki/HIV/AIDS_in_Africa) would also confirm my findings.\n",
+    "Throughout this quick review we can find HIV is a public concern and cause of death in many parts of Africa. There are more than 200k children died from HIV just in 2008, which is an astonishing number. A much more astonishing fact is that 79% happens in Africa (regarding to our data on children death in 2008)! A quick review on [HIV/AIDS in Africa of wikipedia](https://en.wikipedia.org/wiki/HIV/AIDS_in_Africa) would also confirm my findings.\n",
     "\n",
     "> HIV/AIDS is a major public health concern and cause of death in many parts of Africa. Although the continent is home to about 15.2 percent of the world's population, more than two-thirds of the total, some 35 million infected, were Africans, of whom 15 million have already died in Sub-Saharan Africa alone accounted for an estimated 69 percent of all people living with HIV and 70 percent of all AIDS deaths in 2011. In the countries of sub-Saharan Africa most affected, AIDS has raised death rates and lowered life expectancy among adults between the ages of 20 and 49 by about twenty years. Furthermore, the life expectancy in many parts of Africa is declining, largely as a result of the HIV/AIDS epidemic with life-expectancy in some countries reaching as low as thirty-four years.\n",
     "\n"
@@ -712,7 +684,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This plot of percentage also shows similar trends. The turning point is around 1998. The interesting part is the percentage decrease a little bit more than previous absolute number. This may be due to the growth of population basis.\n",
+    "This plot of percentage also shows similar trends. The turning point is around 1998. The interesting part is the percentage decrease a little bit more than previous absolute numbers. This may be due to the growth of population basis.\n",
     "\n",
     "If we take a look at HIV percentage from 15-49, we can also find a point around 1998 that the rate or slope of growth is decreasing and relatively stable in the following years. "
    ]
@@ -732,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the end we take a look at the graph of annual death. Its trend has a few years delay than prevoius plots. It is understandable since it will take some years before affected HIV livings die. The interesting part is the annual death decreases after 2007."
+    "In the end we take a look at the graph of annual death. Its trend has a few years delay than prevoius plots. It is understandable since it will take some years before affected HIV livings die. The interesting part is the annual death decreases after 2007. Maybe some effective drugs are applied to patients."
    ]
   },
   {
@@ -753,28 +725,12 @@
     "<a id='conclusions'></a>\n",
     "## Conclusions\n",
     "\n",
-    "Throughout the above exploration, we "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "> **Tip**: Finally, summarize your findings and the results that have been performed. Make sure that you are clear with regards to the limitations of your exploration. If you haven't done any statistical tests, do not imply any statistical conclusions. And make sure you avoid implying causation from correlation!\n",
+    "Throughout the above exploration, we get a basic understanding how HIV is spreading around the world. Among all five continents, Africa, which suffers from this disease for a long time, is facing severe challenges and has thousands of people die every year. This can be partially explained by the lower economic and health care status it has.\n",
     "\n",
-    "> **Tip**: Once you are satisfied with your work, you should save a copy of the report in HTML or PDF form via the **File** > **Download as** submenu. Before exporting your report, check over it to make sure that the flow of the report is complete. You should probably remove all of the \"Tip\" quotes like this one so that the presentation is as tidy as possible. Congratulations!"
+    "We also answered two questions addressed in the beginning. Among all the countries, South Africa is the most dangerous country in the world in terms of number of death due to HIV and percentage HIV livings. We also noticed the number of death as well as percentage grows rapidly after year 1990. However, we are also pleased to see a turning point at around 1998, after which the circumstance is much more controlled than before. This may attribute to the efforts of government and other organizations and the effectiveness of some new drugs.\n",
+    "\n",
+    "We get these results mainly by visual exploration and hadn't performed any statistical test, so we couldn't drive 100% conclusion. If we have more data and time, we can probably perform a pre and post test to conclude more confidentially."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
