--- a/investigate-HIV-datasets.ipynb
+++ b/investigate-HIV-datasets.ipynb
@@ -729,7 +729,7 @@
     "\n",
     "We also answered two questions addressed in the beginning. Among all the countries, South Africa is the most dangerous country in the world in terms of number of death due to HIV and percentage HIV livings. We also noticed the number of death as well as percentage grows rapidly after year 1990. However, we are also pleased to see a turning point at around 1998, after which the circumstance is much more controlled than before. This may attribute to the efforts of government and other organizations and the effectiveness of some new drugs.\n",
     "\n",
-    "We get these results mainly by visual exploration and hadn't performed any statistical test, so we couldn't drive 100% conclusion. If we have more data and time, we can probably perform a pre and post test to conclude more confidentially."
+    "We get these results mainly by visual exploration and hadn't performed any statistical test. We also drop all the records due to data is heavily missing there. We couldn't drive conclusion of 100% confidence because of both data quality and lack of more advanced statistical test. If we have more data and time, we can probably perform a pre and post test to conclude more confidentially."
    ]
   }
  ],
