--- a/investigate-HIV-datasets.ipynb
+++ b/investigate-HIV-datasets.ipynb
@@ -477,6 +477,7 @@
     "child_death_top10_1 = child_death.sort_values(['Total'], ascending = False).iloc[0:10]\n",
     "child_death_top10_1.plot('Country', 'Total', kind='barh').invert_yaxis()\n",
     "plt.title('Bar Plot of Top 10 Total Num of Child Death Countries in 2008')\n",
+    "plt.xlabel('Total Death')\n",
     "plt.show()"
    ]
   },
@@ -490,6 +491,9 @@
    "outputs": [],
    "source": [
     "child_death_top10_1.Continent.value_counts().plot(kind = 'pie')\n",
+    "plt.legend()\n",
+    "plt.ylabel(\"\")\n",
+    "plt.title(\"Pie Plot of Continent Distribution of Top 10 Child Death Countries\")\n",
     "plt.show()"
    ]
   },
@@ -524,7 +528,9 @@
    "source": [
     "## Total death among all countries\n",
     "\n",
-    "child_death.groupby(['Continent']).Total.sum().reset_index().sort_values('Total', ascending = False).plot(\"Continent\", \"Total\", kind='bar')"
+    "child_death.groupby(['Continent']).Total.sum().reset_index().sort_values('Total', ascending = False).plot(\"Continent\", \"Total\", kind='bar')\n",
+    "plt.ylabel(\"Total Death\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -558,6 +564,7 @@
     "child_death_top10_2 = child_death.sort_values('Num_per_thousand', ascending=False).iloc[:10]\n",
     "child_death_top10_2.plot('Country', 'Num_per_thousand', kind = 'barh').invert_yaxis()\n",
     "plt.title('Bar Plot of Top 10 Permill of Child Death Countries in 2008')\n",
+    "plt.xlabel(\"Num of Death per Thousand\")\n",
     "plt.show()"
    ]
   },
@@ -577,6 +584,9 @@
    "outputs": [],
    "source": [
     "child_death_top10_2.Continent.value_counts().plot(kind = 'pie')\n",
+    "plt.ylabel(\"\")\n",
+    "plt.title(\"Pie Plot of Continent Distribution of Top 10 Permill Child Death Countries\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
@@ -603,7 +613,10 @@
     "ttl_death_all_year = cleaned_year_data.groupby(['Country']).Annual_death.sum().reset_index()\n",
     "ttl_death_all_year = ttl_death_all_year.loc[-ttl_death_all_year.Annual_death.isnull(),:].sort_values(\"Annual_death\", ascending = False)\n",
     "top10_ttl_death_all_year = ttl_death_all_year.head(10)\n",
-    "top10_ttl_death_all_year.plot('Country', 'Annual_death', kind='bar')"
+    "top10_ttl_death_all_year.plot('Country', 'Annual_death', kind='bar')\n",
+    "plt.ylabel(\"Total of Annual Death\")\n",
+    "plt.title(\"Bar Plot of Top 10 Countries of Total Annual Death\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -657,7 +670,13 @@
     "# Explore number of total and newly added HIV living\n",
     "\n",
     "south_africa.plot('Year', 'Num_HIV_living', kind='line')\n",
-    "south_africa.plot('Year', 'New_added_HIV_all_age', kind='line')"
+    "plt.ylabel(\"Num of HIV Living\")\n",
+    "plt.title(\"Num of HIV Livings Over Years in South Africa\")\n",
+    "plt.show()\n",
+    "south_africa.plot('Year', 'New_added_HIV_all_age', kind='line')\n",
+    "plt.ylabel(\"Num of New Added HIV Livings\")\n",
+    "plt.title(\"Num of New Added HIV Livings Over Years in All Ages in South Africa\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -677,7 +696,10 @@
    },
    "outputs": [],
    "source": [
-    "south_africa.plot(\"Year\", \"New_added_HIV_15-49_pct\", kind=\"line\")"
+    "south_africa.plot(\"Year\", \"New_added_HIV_15-49_pct\", kind=\"line\")\n",
+    "plt.title(\"Percent of New Added HIV Livings Over Years Aged From 15 to 49 in South Africa\")\n",
+    "plt.ylabel(\"Percentage\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -697,7 +719,10 @@
    },
    "outputs": [],
    "source": [
-    "south_africa.plot(\"Year\", \"Est_HIV_pct_15-49\", kind=\"line\")"
+    "south_africa.plot(\"Year\", \"Est_HIV_pct_15-49\", kind=\"line\")\n",
+    "plt.ylabel(\"Percentage\")\n",
+    "plt.title(\"Percent of Total Estimated HIV Livings Over Years Aged from 15 to 49 in South Africa\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -715,7 +740,10 @@
    },
    "outputs": [],
    "source": [
-    "south_africa.plot(\"Year\", \"Annual_death\", kind=\"line\")"
+    "south_africa.plot(\"Year\", \"Annual_death\", kind=\"line\")\n",
+    "plt.ylabel(\"Total Annual Death\")\n",
+    "plt.title(\"Total Annual Death Over Years in South Africa\")\n",
+    "plt.show()"
    ]
   },
   {
